// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense correctly 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </h3>
</div>
`;

exports[`should render 2 expenses correctly 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totalling 
    $1,141.95
  </h3>
</div>
`;
